@@ -63,6 +63,12 @@
 # should be saved in this situation so this is a non-standard option.
 #queue_qos0_messages false
 
+# This option sets the maximum publish payload size that the broker will allow.
+# Received messages that exceed this size will not be accepted by the broker.
+# The default value is 0, which means that all valid MQTT messages are
+# accepted. MQTT imposes a maximum payload size of 268435455 bytes. 
+#message_size_limit 0
+
 # This option allows persistent clients (those with clean session set to false)
 # to be removed if they do not reconnect within a certain time frame. This is a
 # non-standard option. As far as the MQTT spec is concerned, persistent clients
